--- a/casadocodigo.html
+++ b/casadocodigo.html
@@ -1,6 +1,11 @@
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<head>Casa do Código</head>
 		<body>
+			<script>
+					alert("teste com popups");
+					alert("chato né? eu sei!");
+				</script>
 			<h3>Seria isso um programa??</h3>
 			<strong>Não</strong> Consigo fazer algo além de conteúdo fixo?
 			<br>
@@ -9,6 +14,8 @@
 				<a href="http://www.casadocodigo.com.br">Clique aqui</a>!
 				<script>
 					alert("Podemos fazer mais com Javascript!");
+					alert("11/05/2014");
+					alert("erro");
 				</script>
 		</body>
 
