--- a/casadocodigo.html
+++ b/casadocodigo.html
@@ -2,21 +2,20 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<head>Casa do Código</head>
 		<body>
-			<script>
-					alert("teste com popups");
-					alert("chato né? eu sei!");
-				</script>
+			
 			<h3>Seria isso um programa??</h3>
 			<strong>Não</strong> Consigo fazer algo além de conteúdo fixo?
 			<br>
 			Conheça o site da nossa editora:
 			<br>
 				<a href="http://www.casadocodigo.com.br">Clique aqui</a>!
+				<br>
 				<script>
 					alert("Podemos fazer mais com Javascript!");
+					document.write("Olá mundo!  <br><br>");
+					document.write("testando Javascript cru!");
 					alert("11/05/2014");
-					alert("erro");
-				</script>
-		</body>
+					</script>
+			</body>
 
 </html>
