diferenças entre numero e string

--- a/casadocodigo.html
+++ b/casadocodigo.html
@@ -15,7 +15,14 @@
 					document.write("Olá mundo!  <br><br>");
 					document.write("testando Javascript cru!");
 					alert("11/05/2014");
-					</script>
+				</script>
+				<br>
+				<br>
+				<script type="text/javascript">
+					
+					document.write("minha idade é:");
+					document.write(22);
+				</script>
 			</body>
 
 </html>
