--- a/casadocodigo.html
+++ b/casadocodigo.html
@@ -21,7 +21,8 @@
 				<script type="text/javascript">
 					
 					document.write("minha idade é:");
-					document.write(22);
+					document.write(10+12);
+					document.write("10"+"12");
 				</script>
 			</body>
 
