--- a/casadocodigo.html
+++ b/casadocodigo.html
@@ -19,10 +19,11 @@
 				<br>
 				<br>
 				<script type="text/javascript">
-					
-					document.write("minha idade é:");
-					document.write(10+12);
-					document.write("10"+"12");
+					var a = 20;
+					var b = 30;
+					var c = 50;
+					var total = a+b+c;
+					document.write(total);
 				</script>
 			</body>
 
