mostrando funções com chamadas, lindo lindo *-*

--- a/casadocodigo.html
+++ b/casadocodigo.html
@@ -2,28 +2,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<body>
 			
-			<h3>Calcula combustivel</h3>
+			<h3>funções</h3>
 			
 				<script type="text/javascript">
-					function pulalinha(){
-						document.write("<hr>");
+					function mostra(frase){
+						document.write(frase+ " <br>");
 					}
-					var tanque = 40;
-					var gasolina = 480;
-					var alcool = 300;
-					var precoG = 2.90;
-					var precoA = 2.40;
-					var consumoAlcool = alcool/ tanque;
-					var consumoGasolina = gasolina / tanque;
-					var pplg = gasolina/precoG;
-					var ppla = alcool/precoA;
-					document.write("Gasolina: "+consumoGasolina.toFixed(2)+"<br>");
-					pulalinha();	
-					document.write("Alcool: "+consumoAlcool.toFixed(2)+"<br>");
-					pulalinha();
-					document.write("preço por caminho Gasolina: "+pplg.toFixed(2)+"<br>");
-					pulalinha();
-					document.write("preço por caminho Alcool: "+ppla.toFixed(2)+"<br>");
+					mostra("testando");
+					mostra("funções");
+					mostra("em JS!");
+					mostra("não é lindo?");
+				
 				</script>
 			</body>
 
